--- a/ui_win.rc
+++ b/ui_win.rc
@@ -24,16 +24,16 @@
 #include "commctrl.h"
 #include "ui.h"
 
-/*CAUTION_BMP BITMAP "caution.bmp"*/
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-CAUTION_ICO ICON "caution.ico"
-ZOOMIN_ICO ICON "zoomin.ico"
-ZOOMOUT_ICO ICON "zoomout.ico"
+/*CAUTION_BMP  BITMAP "caution.bmp"*/
+CAUTION_ICO    ICON   "caution.ico"
+ZOOMIN_ICO     ICON   "zoomin.ico"
+ZOOMOUT_ICO    ICON   "zoomout.ico"
 
 /* Cursors for the preview window */
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDC_FF_HAND_OPEN CURSOR "cursor_hand_open.cur"
-IDC_FF_HAND_GRAB CURSOR "cursor_hand_grab.cur"
+IDC_FF_HAND_OPEN     CURSOR "cursor_hand_open.cur"
+IDC_FF_HAND_GRAB     CURSOR "cursor_hand_grab.cur"
 IDC_FF_HAND_QUESTION CURSOR "cursor_hand_question.cur"
 
 /* left,top,w,h */
@@ -44,61 +44,61 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Filter Foundry"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"OK",IDOK,			260,253, 42,14
-	PUSHBUTTON	"Cancel",IDCANCEL,	210,253, 42,14
-	PUSHBUTTON	"Load...",OPENITEM,		10,253, 42,14
-	PUSHBUTTON	"Save...",SAVEITEM,		60,253, 42,14
-	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
-	PUSHBUTTON	"Help",HELPITEM,		160, 253, 42, 14 
+	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
+	PUSHBUTTON      "Cancel",  IDCANCEL,    210, 253, 42, 14
+	PUSHBUTTON      "Load...", OPENITEM,     10, 253, 42, 14
+	PUSHBUTTON      "Save...", SAVEITEM,     60, 253, 42, 14
+	PUSHBUTTON      "Make...", MAKEITEM,    110, 253, 42, 14
+	PUSHBUTTON      "Help",    HELPITEM,    160, 253, 42, 14 
 
 	/* The class "Preview" is defined during run-time ui_win.c */
-	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,		15,10, 100,100
-	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
-	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
-	CONTROL		"",ZOOMLEVELITEM,			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
+	CONTROL         "",            PREVIEWITEM,     "Preview",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
+	CONTROL         "ZOOMIN_ICO",  ZOOMINITEM,      "Static",   SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY, 103,115, 12,12
+	CONTROL         "ZOOMOUT_ICO", ZOOMOUTITEM,     "Static",   SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY, 15,115, 12,12
+	CONTROL         "",            ZOOMLEVELITEM,   "Static",   SS_CENTER|SS_NOTIFY,                37,115, 56,12
 
-	LTEXT		"ctl(0)",FIRSTCTLLABELITEM,			129,10, 25,12
-	LTEXT		"ctl(1)",FIRSTCTLLABELITEM+1,		129,25, 25,12
-	LTEXT		"ctl(2)",FIRSTCTLLABELITEM+2,		129,40, 25,12
-	LTEXT		"ctl(3)",FIRSTCTLLABELITEM+3,		129,55, 25,12
-	LTEXT		"ctl(4)",FIRSTCTLLABELITEM+4,		129,70, 25,12
-	LTEXT		"ctl(5)",FIRSTCTLLABELITEM+5,		129,85, 25,12
-	LTEXT		"ctl(6)",FIRSTCTLLABELITEM+6,		129,100, 25,12
-	LTEXT		"ctl(7)",FIRSTCTLLABELITEM+7,		129,115, 25,12
+	LTEXT           "ctl(0)",FIRSTCTLLABELITEM,     129, 10, 25,12
+	LTEXT           "ctl(1)",FIRSTCTLLABELITEM+1,   129, 25, 25,12
+	LTEXT           "ctl(2)",FIRSTCTLLABELITEM+2,   129, 40, 25,12
+	LTEXT           "ctl(3)",FIRSTCTLLABELITEM+3,   129, 55, 25,12
+	LTEXT           "ctl(4)",FIRSTCTLLABELITEM+4,   129, 70, 25,12
+	LTEXT           "ctl(5)",FIRSTCTLLABELITEM+5,   129, 85, 25,12
+	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
+	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 105,10
-	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 105,10
-	CONTROL		"",FIRSTCTLITEM+2,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,40, 105,10
-	CONTROL		"",FIRSTCTLITEM+3,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,55, 105,10
-	CONTROL		"",FIRSTCTLITEM+4,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,70, 105,10
-	CONTROL		"",FIRSTCTLITEM+5,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,85, 105,10
-	CONTROL		"",FIRSTCTLITEM+6,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,100, 105,10
-	CONTROL		"",FIRSTCTLITEM+7,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,115, 105,10
+	CONTROL         "",FIRSTCTLITEM,                "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,10, 105,10
+	CONTROL         "",FIRSTCTLITEM+1,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,25, 105,10
+	CONTROL         "",FIRSTCTLITEM+2,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,40, 105,10
+	CONTROL         "",FIRSTCTLITEM+3,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,55, 105,10
+	CONTROL         "",FIRSTCTLITEM+4,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,70, 105,10
+	CONTROL         "",FIRSTCTLITEM+5,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,85, 105,10
+	CONTROL         "",FIRSTCTLITEM+6,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,100, 105,10
+	CONTROL         "",FIRSTCTLITEM+7,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,115, 105,10
 
-	EDITTEXT	FIRSTCTLTEXTITEM,		273,10, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+1,		273,25, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+2,		273,40, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+3,		273,55, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+4,		273,70, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+5,		273,85, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+6,		273,100, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+7,		273,115, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM,               273, 10, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+1,             273, 25, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+2,             273, 40, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+3,             273, 55, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+4,             273, 70, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+5,             273, 85, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+6,             273,100, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+7,             273,115, 24,12,  ES_NUMBER|ES_RIGHT
 
-	LTEXT		"R =",FIRSTLABELITEM,	15,135, 13,12
-	LTEXT		"G =",FIRSTLABELITEM+1,	15,163, 13,12
-	LTEXT		"B =",FIRSTLABELITEM+2,	15,191, 13,12
-	LTEXT		"A =",FIRSTLABELITEM+3,	15,219, 13,12
+	LTEXT           "R =",FIRSTLABELITEM,            15,135, 13,12
+	LTEXT           "G =",FIRSTLABELITEM+1,          15,163, 13,12
+	LTEXT           "B =",FIRSTLABELITEM+2,          15,191, 13,12
+	LTEXT           "A =",FIRSTLABELITEM+3,          15,219, 13,12
 
 	/* The class "CautionSign" is defined in ui_win.c */
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM,   "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,147, 16,16
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM+1, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,175, 16,16
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM+2, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 16,16
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM+3, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 16,16
+	CONTROL         "CAUTION_ICO",FIRSTICONITEM,   "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,147, 16,16
+	CONTROL         "CAUTION_ICO",FIRSTICONITEM+1, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,175, 16,16
+	CONTROL         "CAUTION_ICO",FIRSTICONITEM+2, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 16,16
+	CONTROL         "CAUTION_ICO",FIRSTICONITEM+3, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 16,16
 
-	EDITTEXT	FIRSTEXPRITEM,			35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-	EDITTEXT	FIRSTEXPRITEM+2,		35,191, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
-	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT        FIRSTEXPRITEM,    35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT        FIRSTEXPRITEM+1,  35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT        FIRSTEXPRITEM+2,  35,191, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT        FIRSTEXPRITEM+3,  35,219, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 END
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
@@ -107,48 +107,48 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Filter Foundry"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"OK",IDOK,			256,137, 42,14
-	PUSHBUTTON	"Cancel",IDCANCEL,	206,137, 42,14
-	LTEXT		"",PARAMAUTHORITEM,		10,137, 42,20
-	LTEXT		"",PARAMCOPYITEM,		60,137, 140,20
+	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
+	PUSHBUTTON      "Cancel", IDCANCEL,           206,137,  42,14
+	LTEXT           "",       PARAMAUTHORITEM,     10,137,  42,20
+	LTEXT           "",       PARAMCOPYITEM,       60,137, 140,20
 
 	/* The class "Preview" is defined during run-time ui_win.c */
-	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,		15,10, 100,100
-	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
-	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
-	CONTROL		"",ZOOMLEVELITEM, 			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
+	CONTROL         "",           PREVIEWITEM,      "Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
+	CONTROL         "ZOOMIN_ICO", ZOOMINITEM,       "Static", SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  103,115, 12,12
+	CONTROL         "ZOOMOUT_ICO",ZOOMOUTITEM,      "Static", SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,   15,115, 12,12
+	CONTROL         "",           ZOOMLEVELITEM,    "Static", SS_CENTER|SS_NOTIFY,                  37,115, 56,12
 
-	LTEXT		"ctl(0)",FIRSTCTLLABELITEM,			129,10, 25,12
-	LTEXT		"ctl(1)",FIRSTCTLLABELITEM+1,		129,25, 25,12
-	LTEXT		"ctl(2)",FIRSTCTLLABELITEM+2,		129,40, 25,12
-	LTEXT		"ctl(3)",FIRSTCTLLABELITEM+3,		129,55, 25,12
-	LTEXT		"ctl(4)",FIRSTCTLLABELITEM+4,		129,70, 25,12
-	LTEXT		"ctl(5)",FIRSTCTLLABELITEM+5,		129,85, 25,12
-	LTEXT		"ctl(6)",FIRSTCTLLABELITEM+6,		129,100, 25,12
-	LTEXT		"ctl(7)",FIRSTCTLLABELITEM+7,		129,115, 25,12
+	LTEXT           "ctl(0)",FIRSTCTLLABELITEM,     129, 10, 25,12
+	LTEXT           "ctl(1)",FIRSTCTLLABELITEM+1,   129, 25, 25,12
+	LTEXT           "ctl(2)",FIRSTCTLLABELITEM+2,   129, 40, 25,12
+	LTEXT           "ctl(3)",FIRSTCTLLABELITEM+3,   129, 55, 25,12
+	LTEXT           "ctl(4)",FIRSTCTLLABELITEM+4,   129, 70, 25,12
+	LTEXT           "ctl(5)",FIRSTCTLLABELITEM+5,   129, 85, 25,12
+	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
+	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	LTEXT		"map(0)",FIRSTMAPLABELITEM,			129,18, 25,12
-	LTEXT		"map(1)",FIRSTMAPLABELITEM+1,		129,48, 25,12
-	LTEXT		"map(2)",FIRSTMAPLABELITEM+2,		129,78, 25,12
-	LTEXT		"map(3)",FIRSTMAPLABELITEM+3,		129,108, 25,12
+	LTEXT           "map(0)",FIRSTMAPLABELITEM,     129, 18, 25,12
+	LTEXT           "map(1)",FIRSTMAPLABELITEM+1,   129, 48, 25,12
+	LTEXT           "map(2)",FIRSTMAPLABELITEM+2,   129, 78, 25,12
+	LTEXT           "map(3)",FIRSTMAPLABELITEM+3,   129,108, 25,12
 
-	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 100,10
-	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 100,10
-	CONTROL		"",FIRSTCTLITEM+2,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,40, 100,10
-	CONTROL		"",FIRSTCTLITEM+3,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,55, 100,10
-	CONTROL		"",FIRSTCTLITEM+4,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,70, 100,10
-	CONTROL		"",FIRSTCTLITEM+5,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,85, 100,10
-	CONTROL		"",FIRSTCTLITEM+6,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,100, 100,10
-	CONTROL		"",FIRSTCTLITEM+7,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,115, 100,10
+	CONTROL         "",FIRSTCTLITEM,    "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 10, 100,10
+	CONTROL         "",FIRSTCTLITEM+1,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 25, 100,10
+	CONTROL         "",FIRSTCTLITEM+2,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 40, 100,10
+	CONTROL         "",FIRSTCTLITEM+3,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 55, 100,10
+	CONTROL         "",FIRSTCTLITEM+4,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 70, 100,10
+	CONTROL         "",FIRSTCTLITEM+5,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 85, 100,10
+	CONTROL         "",FIRSTCTLITEM+6,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,100, 100,10
+	CONTROL         "",FIRSTCTLITEM+7,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,115, 100,10
 
-	EDITTEXT	FIRSTCTLTEXTITEM,		269,10, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+1,		269,25, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+2,		269,40, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+3,		269,55, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+4,		269,70, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+5,		269,85, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+6,		269,100, 24,12,	ES_NUMBER|ES_RIGHT
-	EDITTEXT	FIRSTCTLTEXTITEM+7,		269,115, 24,12,	ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM,     269, 10, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+1,   269, 25, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+2,   269, 40, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+3,   269, 55, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+4,   269, 70, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+5,   269, 85, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+6,   269,100, 24,12,  ES_NUMBER|ES_RIGHT
+	EDITTEXT        FIRSTCTLTEXTITEM+7,   269,115, 24,12,  ES_NUMBER|ES_RIGHT
 END
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
@@ -157,47 +157,47 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Make Standalone Filter"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON	"OK",IDOK,			156,219, 42,14
-	PUSHBUTTON	"Cancel",IDCANCEL,	106,219, 42,14
+	DEFPUSHBUTTON   "OK",     IDOK,         156,219, 42,14
+	PUSHBUTTON      "Cancel", IDCANCEL,     106,219, 42,14
 
-/* for initial values of the following EDITTEXT fields, see ui_build.c */
-	EDITTEXT	CATEGORYITEM,			50,10, 148,12
-	EDITTEXT	TITLEITEM,				50,25, 148,12
-	EDITTEXT	COPYRIGHTITEM,			50,40, 148,24
-	EDITTEXT	AUTHORITEM,				50,67, 148,12
+	/* for initial values of the following EDITTEXT fields, see ui_build.c */
+	EDITTEXT        CATEGORYITEM,                    50, 10, 148,12
+	EDITTEXT        TITLEITEM,                       50, 25, 148,12
+	EDITTEXT        COPYRIGHTITEM,                   50, 40, 148,24
+	EDITTEXT        AUTHORITEM,                      50, 67, 148,12
 
-	EDITTEXT	FIRSTMAPNAMEITEM,		50, 92, 50,12
-	EDITTEXT	FIRSTMAPNAMEITEM+1,		50,122, 50,12
-	EDITTEXT	FIRSTMAPNAMEITEM+2,		50,152, 50,12
-	EDITTEXT	FIRSTMAPNAMEITEM+3,		50,182, 50,12
+	EDITTEXT        FIRSTMAPNAMEITEM,                50, 92,  50,12
+	EDITTEXT        FIRSTMAPNAMEITEM+1,              50,122,  50,12
+	EDITTEXT        FIRSTMAPNAMEITEM+2,              50,152,  50,12
+	EDITTEXT        FIRSTMAPNAMEITEM+3,              50,182,  50,12
 
-	EDITTEXT	FIRSTCTLNAMEITEM,		154, 92, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+1,		154,107, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+2,		154,122, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+3,		154,137, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+4,		154,152, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+5,		154,167, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+6,		154,182, 50,12
-	EDITTEXT	FIRSTCTLNAMEITEM+7,		154,197, 50,12
+	EDITTEXT        FIRSTCTLNAMEITEM,               154, 92,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+1,             154,107,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+2,             154,122,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+3,             154,137,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+4,             154,152,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+5,             154,167,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+6,             154,182,  50,12
+	EDITTEXT        FIRSTCTLNAMEITEM+7,             154,197,  50,12
 
-	CHECKBOX	"Map 0",FIRSTMAPCHECKITEM,		10, 92, 35,12
-	CHECKBOX	"Map 1",FIRSTMAPCHECKITEM+1,	10,122, 35,12
-	CHECKBOX	"Map 2",FIRSTMAPCHECKITEM+2,	10,152, 35,12
-	CHECKBOX	"Map 3",FIRSTMAPCHECKITEM+3,	10,182, 35,12
+	CHECKBOX        "Map 0",FIRSTMAPCHECKITEM,       10, 92,  35,12
+	CHECKBOX        "Map 1",FIRSTMAPCHECKITEM+1,     10,122,  35,12
+	CHECKBOX        "Map 2",FIRSTMAPCHECKITEM+2,     10,152,  35,12
+	CHECKBOX        "Map 3",FIRSTMAPCHECKITEM+3,     10,182,  35,12
 
-	CHECKBOX	"ctl(0)",FIRSTCTLCHECKITEM,		114, 92, 35,12
-	CHECKBOX	"ctl(1)",FIRSTCTLCHECKITEM+1,	114,107, 35,12
-	CHECKBOX	"ctl(2)",FIRSTCTLCHECKITEM+2,	114,122, 35,12
-	CHECKBOX	"ctl(3)",FIRSTCTLCHECKITEM+3,	114,137, 35,12
-	CHECKBOX	"ctl(4)",FIRSTCTLCHECKITEM+4,	114,152, 35,12
-	CHECKBOX	"ctl(5)",FIRSTCTLCHECKITEM+5,	114,167, 35,12
-	CHECKBOX	"ctl(6)",FIRSTCTLCHECKITEM+6,	114,182, 35,12
-	CHECKBOX	"ctl(7)",FIRSTCTLCHECKITEM+7,	114,197, 35,12
+	CHECKBOX        "ctl(0)",FIRSTCTLCHECKITEM,     114, 92,  35,12
+	CHECKBOX        "ctl(1)",FIRSTCTLCHECKITEM+1,   114,107,  35,12
+	CHECKBOX        "ctl(2)",FIRSTCTLCHECKITEM+2,   114,122,  35,12
+	CHECKBOX        "ctl(3)",FIRSTCTLCHECKITEM+3,   114,137,  35,12
+	CHECKBOX        "ctl(4)",FIRSTCTLCHECKITEM+4,   114,152,  35,12
+	CHECKBOX        "ctl(5)",FIRSTCTLCHECKITEM+5,   114,167,  35,12
+	CHECKBOX        "ctl(6)",FIRSTCTLCHECKITEM+6,   114,182,  35,12
+	CHECKBOX        "ctl(7)",FIRSTCTLCHECKITEM+7,   114,197,  35,12
 
-	CHECKBOX	"Protect and obfuscate",PROTECTITEM,	10,219, 90,12
+	CHECKBOX        "Protect and obfuscate",PROTECTITEM, 10,219, 90,12
 
-	LTEXT		"Category:",100,		10,10, 35,12
-	LTEXT		"Title:",101,			10,25, 35,12
-	LTEXT		"Copyright:",102,		10,40, 35,12
-	LTEXT		"Author:",103,			10,67, 35,12
+	LTEXT           "Category:",  100,        10,10, 35,12
+	LTEXT           "Title:",     101,        10,25, 35,12
+	LTEXT           "Copyright:", 102,        10,40, 35,12
+	LTEXT           "Author:",    103,        10,67, 35,12
 END
