--- a/scripting.rc
+++ b/scripting.rc
@@ -24,56 +24,56 @@
 #include "ui.h"
 #include "version.h"
 
-#define LC(a,b,c,d)		#d, #c, #b, #a
+#define LC(a,b,c,d) #d, #c, #b, #a
 
 #define VENDORID LC(8,B,I,M)
 #define NULLID 0L
 
-/*	Dictionary (scripting) resource */
+/* Dictionary (scripting) resource */
 /* also see ui.h */
 
 /*
-#define NO_REPLY		\
-	noReply,			\
-	"",					\
-	replyRequired,	singleItem,	notEnumerated,	notTightBindingFunction,	\
-	reserved,		reserved,	reserved,		reserved,					\
-	reserved,		reserved,	reserved,		reserved,					\
-	verbEvent,		reserved,	reserved,		reserved
-#define IMAGE_DIRECT_PARAMETER	\
-	typeImageReference,			\
-	"",							\
+#define NO_REPLY \
+	noReply, \
+	"", \
+	replyRequired, singleItem, notEnumerated, notTightBindingFunction, \
+	reserved,      reserved,   reserved,      reserved,                \
+	reserved,      reserved,   reserved,      reserved,                \
+	verbEvent,     reserved,   reserved,      reserved
+#define IMAGE_DIRECT_PARAMETER \
+	typeImageReference, \
+	"", \
 	flagsOptionalEnumeratedChangesDirect
-#define flagsOptionalEnumeratedChangesDirect	\
-	directParamOptional,	singleItem,	enumerated,	changesState,	\
-	reserved,				reserved,	reserved,	reserved,		\
-	reserved,				reserved,	reserved,	reserved,		\
-	reserved,				reserved,	reserved,	reserved
-#define flagsSingleParameter					\
-	required,			singleItem,		notEnumerated,	reserved,	\
-	reserved,			reserved,		reserved,		reserved,	\
-	reserved,			reserved,		reserved,		reserved,	\
-	prepositionParam,	notFeminine,	notMasculine,	singular
-#define flagsSingleProperty						\
-	reserved,			singleItem,		notEnumerated,	readWrite,	\
-	reserved,			reserved,		reserved,		reserved,	\
-	reserved,			reserved,		reserved,		reserved,	\
-	noApostrophe,		notFeminine,	notMasculine,	singular
+#define flagsOptionalEnumeratedChangesDirect \
+	directParamOptional, singleItem, enumerated,    changesState, \
+	reserved,            reserved,   reserved,      reserved,     \
+	reserved,            reserved,   reserved,      reserved,     \
+	reserved,            reserved,   reserved,      reserved
+#define flagsSingleParameter \
+	required,            singleItem, notEnumerated, reserved,     \
+	reserved,            reserved,   reserved,      reserved,     \
+	reserved,            reserved,   reserved,      reserved,     \
+	prepositionParam,    notFeminine,notMasculine,  singular
+#define flagsSingleProperty \
+	reserved,            singleItem, notEnumerated, readWrite,    \
+	reserved,            reserved,   reserved,      reserved,     \
+	reserved,            reserved,   reserved,      reserved,     \
+	noApostrophe,        notFeminine,notMasculine,  singular
 */
 #define RC_NO_REPLY \
-	LC(n,u,l,l),	/*noReply*/ \
+	LC(n,u,l,l), /*noReply*/ \
 	"\0", \
 	0x0000 /* 00 000 000 00 000 000 */
 #define RC_IMAGE_DIRECT_PARAM \
-	"RmI#"/*LC(#,I,m,R)*/,	/*typeImageReference; written as string because the Stringizing operator cannot handle '#' */ \
+	"RmI#"/*LC(#,I,m,R)*/, /*typeImageReference; written as string because the Stringizing operator cannot handle '#' */ \
 	"\0", \
 	0xB000 /* 10 110 000 00 000 000 */
 
-#define FLAGS_SINGLE_PROP	0x1000 /* 00 010 000 00 000 000 */
-#define FLAGS_1_OPT_PARAM	0x8000 /* 10 000 000 00 000 000 */
+#define FLAGS_SINGLE_PROP       0x1000 /* 00 010 000 00 000 000 */
+#define FLAGS_1_OPT_PARAM       0x8000 /* 10 000 000 00 000 000 */
 
-#define RC_typeChar			LC(T,E,X,T)
-#define RC_typeInteger		LC(l,o,n,g)
+#define RC_typeChar             LC(T,E,X,T)
+#define RC_typeInteger          LC(l,o,n,g)
 
 /* Nota Bene: UNLIKE the Macintosh format of the 'aete' resource,
    the Windows resource does NOT have word alignment constraints
@@ -85,23 +85,23 @@ AETE_ID aete
 {
 	// Attention! If you change something here, please also change it in make.c and scripting.r (Mac OS)
 
-	0x0001, 		/* Reserved (for Photoshop) */
+	0x0001,                       /* Reserved (for Photoshop) */
 
-	"\1\0", english, roman,				/* aete version and language specifiers */
+	"\1\0", english, roman,       /* aete version and language specifiers */
 
 	1, /*suites*/
-		"\014Telegraphics",				/* vendor suite name */
-		"\0",							/* optional description */
-		LC(t,E,L,E),					/* suite ID */
-		1,								/* suite code, must be 1. Attention: Filters like 'Pointillize' have set this to 0! */
-		1,								/* suite level, must be 1. Attention: Filters like 'Pointillize' have set this to 0! */
+		"\014Telegraphics",   /* vendor suite name */
+		"\0",                 /* optional description */
+		LC(t,E,L,E),          /* suite ID */
+		1,                    /* suite code, must be 1. Attention: Filters like 'Pointillize' have set this to 0! */
+		1,                    /* suite level, must be 1. Attention: Filters like 'Pointillize' have set this to 0! */
 
-		1, /*events*/					/* structure for filters */
+		1, /*events*/         /* structure for filters */
 
-			"\015FilterFoundry",		/* event name               */
-			"\0",						/* event description        */
-			LC(F,l,t,r),				/* event class              */
-			LC(f,i,F,o),				/* event ID                 */
+			"\015FilterFoundry",       /* event name               */
+			"\0",                      /* event description        */
+			LC(F,l,t,r),               /* event class              */
+			LC(f,i,F,o),               /* event ID                 */
 			RC_NO_REPLY,
 			RC_IMAGE_DIRECT_PARAM,
 			12,
@@ -119,7 +119,7 @@ AETE_ID aete
 				"\004ctl6", LC(c,T,l,6), RC_typeInteger, "\016ctl(6) setting", FLAGS_1_OPT_PARAM,
 				"\004ctl7", LC(c,T,l,7), RC_typeInteger, "\016ctl(7) setting", FLAGS_1_OPT_PARAM,
 
-		0, /*classes*/					/* non-filter plug-in class here */
+		0, /* classes (non-filter plug-in class here) */
 
 		0, /* comparison ops (not supported) */
 
