--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -226,26 +226,20 @@ move lex.yy.c lex_yy.c</Command>
     <ClInclude Include="..\ff.h" />
     <ClInclude Include="..\funcs.h" />
     <ClInclude Include="..\manifest.h" />
-    <ClInclude Include="..\misc.h" />
+    <ClInclude Include="..\ff_misc.h" />
     <ClInclude Include="..\node.h" />
     <ClInclude Include="..\PARM.h" />
     <ClInclude Include="..\preview.h" />
     <ClInclude Include="..\scripting.h" />
     <ClInclude Include="..\symtab.h" />
-    <ClInclude Include="..\telegraphics_common\tt\bufio.h" />
     <ClInclude Include="..\telegraphics_common\tt\choosefile.h" />
     <ClInclude Include="..\telegraphics_common\tt\compat_string.h" />
     <ClInclude Include="..\telegraphics_common\tt\compat_win.h" />
     <ClInclude Include="..\telegraphics_common\tt\dbg.h" />
-    <ClInclude Include="..\telegraphics_common\tt\dlg.h" />
     <ClInclude Include="..\telegraphics_common\tt\file_compat.h" />
-    <ClInclude Include="..\telegraphics_common\tt\file_io.h" />
-    <ClInclude Include="..\telegraphics_common\tt\menu.h" />
-    <ClInclude Include="..\telegraphics_common\tt\misc.h" />
     <ClInclude Include="..\telegraphics_common\tt\sprintf_tiny.h" />
     <ClInclude Include="..\telegraphics_common\tt\str.h" />
     <ClInclude Include="..\telegraphics_common\tt\ui_compat.h" />
-    <ClInclude Include="..\telegraphics_common\tt\wind.h" />
     <ClInclude Include="..\ui.h" />
     <ClInclude Include="..\unistd.h" />
     <ClInclude Include="..\version.h" />
