--- a/visual_studio/FilterFoundry.vcxproj.filters
+++ b/visual_studio/FilterFoundry.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="..\manifest.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="..\misc.h">
+    <ClInclude Include="..\ff_misc.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="..\node.h">
@@ -54,9 +54,6 @@
     <ClInclude Include="..\versioninfo_modify_win.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="..\telegraphics_common\tt\bufio.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="..\telegraphics_common\tt\choosefile.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -69,19 +66,7 @@
     <ClInclude Include="..\telegraphics_common\tt\dbg.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="..\telegraphics_common\tt\dlg.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="..\telegraphics_common\tt\file_compat.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="..\telegraphics_common\tt\file_io.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="..\telegraphics_common\tt\menu.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="..\telegraphics_common\tt\misc.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="..\telegraphics_common\tt\sprintf_tiny.h">
@@ -91,9 +76,6 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="..\telegraphics_common\tt\ui_compat.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="..\telegraphics_common\tt\wind.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="..\ff.h">
