32/64 bit mixer has now been included in the building-process of OpenWatcom and VisualC++ IDE/CLI
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@331 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/make_win.rc
+++ b/make_win.rc
@@ -19,6 +19,6 @@
 */
 
 #ifndef _WIN64
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 UNICOWS DLL "UNICOWS.dll"
 #endif
