Standalone dialog: Can now have multi-line text. It is also read from the Mac plugins.
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@341 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -163,7 +163,7 @@ BEGIN
 	/* for initial values of the following EDITTEXT fields, see ui_build.c */
 	EDITTEXT        CATEGORYITEM,                    50, 10, 148,12
 	EDITTEXT        TITLEITEM,                       50, 25, 148,12
-	EDITTEXT        COPYRIGHTITEM,                   50, 40, 148,24
+	EDITTEXT        COPYRIGHTITEM,                   50, 40, 148,24, ES_MULTILINE|ES_WANTRETURN
 	EDITTEXT        AUTHORITEM,                      50, 67, 148,12
 
 	EDITTEXT        FIRSTMAPNAMEITEM,                50, 92,  50,12
