Moved fileHasExtension() from read.c to choosefile_*.c
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@371 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@ LICENSE*.* linguist-vendored
 *.docx binary linguist-documentation
 *.exe binary
 *.exp text eol=crlf
+*.ffx binary
 *.h text eol=crlf linguist-language=C
 *.hpp text eol=crlf linguist-language=C++
 *.html text eol=crlf linguist-language=HTML
