--- a/.gitattributes
+++ b/.gitattributes
@@ -9,49 +9,98 @@
 LICENSE*.* linguist-vendored
 
 # File types (text/binary, EOL, language, documentation)
+#.8bf binary
+#.afs text eol=cr
+#.ai binary
+#.bat text eol=crlf linguist-language=Batchfile
+#.bin binary
+#.bmp binary
+#.c text eol=crlf linguist-language=C
+#.cpp text eol=crlf linguist-language=C++
+#.csv text eol=crlf
+#.cur binary
+#.def text eol=crlf
+#.dll binary
+#.docx binary linguist-documentation
+#.exe binary
+#.exp text eol=crlf
+#.ffx binary
+#.h text eol=crlf linguist-language=C
+#.hpp text eol=crlf linguist-language=C++
+#.html text eol=crlf linguist-language=HTML
+#.ico binary
+#.jpg binary
+#.l text eol=crlf linguist-language=Lex
+#Makefile.mac text eol=lf linguist-language=Makefile
+#.mak text eol=crlf linguist-language=Makefile
+#FilterFoundry.make text eol=lf linguist-language=Makefile
+#.mcp binary
+#.md text eol=crlf linguist-language=Markdown linguist-documentation
+#.pdf binary linguist-documentation
+#.pff text eol=cr
+#.plist text eol=lf
+#.png binary
+#.prm binary
+#.psd binary
+#.r text eol=crlf linguist-language=R
+#.rc text eol=crlf
+#.sln text eol=crlf
+#.svg binary
+#.tgt text eol=crlf
+#.txt text eol=crlf linguist-language=Text linguist-documentation
+#.vcxproj text eol=crlf
+#Makefile.win text eol=crlf linguist-language=Makefile
+#.wpj text eol=crlf
+#.xlsx binary
+#.xml text eol=crlf linguist-language=XML
+#.y text eol=crlf linguist-language=Yacc
+#.yy text eol=crlf linguist-language=Yacc
+
+# Without "eol" (AFS and PFF are binary since eol=cr is not supported):
+# see https://lore.kernel.org/git/77aacb3b44523223c7647bdae1702a31@daniel-marschall.de/
 *.8bf binary
-*.afs text eol=cr
+*.afs binary
 *.ai binary
-*.bat text eol=crlf linguist-language=Batchfile
+*.bat text=auto linguist-language=Batchfile
 *.bin binary
 *.bmp binary
-*.c text eol=crlf linguist-language=C
-*.cpp text eol=crlf linguist-language=C++
-*.csv text eol=crlf
+*.c text=auto linguist-language=C
+*.cpp text=auto linguist-language=C++
+*.csv text=auto
 *.cur binary
-*.def text eol=crlf
+*.def text=auto
 *.dll binary
 *.docx binary linguist-documentation
 *.exe binary
-*.exp text eol=crlf
+*.exp text=auto
 *.ffx binary
-*.h text eol=crlf linguist-language=C
-*.hpp text eol=crlf linguist-language=C++
-*.html text eol=crlf linguist-language=HTML
+*.h text=auto linguist-language=C
+*.hpp text=auto linguist-language=C++
+*.html text=auto linguist-language=HTML
 *.ico binary
 *.jpg binary
-*.l text eol=crlf linguist-language=Lex
-Makefile.mac text eol=lf linguist-language=Makefile
-*.mak text eol=crlf linguist-language=Makefile
-FilterFoundry.make text eol=lf linguist-language=Makefile
+*.l text=auto linguist-language=Lex
+Makefile.mac text=auto linguist-language=Makefile
+*.mak text=auto linguist-language=Makefile
+FilterFoundry.make text=auto linguist-language=Makefile
 *.mcp binary
-*.md text eol=crlf linguist-language=Markdown linguist-documentation
+*.md text=auto linguist-language=Markdown linguist-documentation
 *.pdf binary linguist-documentation
-*.pff text eol=cr
-*.plist text eol=lf
+*.pff binary
+*.plist text=auto
 *.png binary
 *.prm binary
 *.psd binary
-*.r text eol=crlf linguist-language=R
-*.rc text eol=crlf
-*.sln text eol=crlf
+*.r text=auto linguist-language=R
+*.rc text=auto
+*.sln text=auto
 *.svg binary
-*.tgt text eol=crlf
-*.txt text eol=crlf linguist-language=Text linguist-documentation
-*.vcxproj text eol=crlf
-Makefile.win text eol=crlf linguist-language=Makefile
-*.wpj text eol=crlf
+*.tgt text=auto
+*.txt text=auto linguist-language=Text linguist-documentation
+*.vcxproj text=auto
+Makefile.win text=auto linguist-language=Makefile
+*.wpj text=auto
 *.xlsx binary
-*.xml text eol=crlf linguist-language=XML
-*.y text eol=crlf linguist-language=Yacc
-*.yy text eol=crlf linguist-language=Yacc
+*.xml text=auto linguist-language=XML
+*.y text=auto linguist-language=Yacc
+*.yy text=auto linguist-language=Yacc
