--- a/Makefile.win
+++ b/Makefile.win
@@ -17,15 +17,13 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 
-# ---
-# Makefile tested with "mingw32-make -f Makefile.win" (i686-8.1.0-posix-dwarf-rt_v6-rev0)
-# ---
-
-
 # ---------- variables & flags ----------
 
 EXEC = FilterFoundry
 
+# gcc should be used to ensure that the project is 100% C and not C++
+# g++ can be used for improving code quality, because the compiler warnings are very good
+#CC = g++.exe
 CC = gcc.exe
 DLLWRAP = dllwrap.exe
 WINDRES = windres.exe
