Compatibility with latest Windows SDK
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@397 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -130,7 +130,7 @@
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>..\photoshop_sdk\pluginsdk\photoshopapi\pica_sp;..\photoshop_sdk\pluginsdk\photoshopapi\photoshop;..\telegraphics_common\adobeplugin;..\telegraphics_common\tt;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN_ENV;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN_ENV;WIN32;_X86_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
@@ -162,7 +162,7 @@ foundry_3264_mixer.bat
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>..\photoshop_sdk\pluginsdk\photoshopapi\pica_sp;..\photoshop_sdk\pluginsdk\photoshopapi\photoshop;..\telegraphics_common\adobeplugin;..\telegraphics_common\tt;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN_ENV;WIN32;_WIN64;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN_ENV;WIN32;_WIN64;_AMD64_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
@@ -198,7 +198,7 @@ foundry_3264_mixer.bat
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>photoshop_sdk\pluginsdk\photoshopapi\pica_sp;photoshop_sdk\pluginsdk\photoshopapi\photoshop;telegraphics_common\adobeplugin;telegraphics_common\tt;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN_ENV;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN_ENV;WIN32;_X86_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
@@ -234,7 +234,7 @@ foundry_3264_mixer.bat
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>..\photoshop_sdk\pluginsdk\photoshopapi\pica_sp;..\photoshop_sdk\pluginsdk\photoshopapi\photoshop;..\telegraphics_common\adobeplugin;..\telegraphics_common\tt;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN_ENV;WIN32;_WIN64;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN_ENV;WIN32;_WIN64;_AMD64_;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
